--- a/views/_shell.pug
+++ b/views/_shell.pug
@@ -7,6 +7,10 @@ html(lang='en')
         crossorigin="anonymous"
       )
     style.
+      body {
+        font-family: sans-serif;
+      }
+
       div {
         margin-top: 10px;
       }
@@ -38,6 +42,15 @@ html(lang='en')
 
       .is-showing {
         display: block;
+      }
+
+      #spy_marker {
+        position: absolute;
+        background-color: blue;
+        width: 4px;
+        height: 4px;
+        left: 0px;
+        top: 0px;
       }
 
   body
