--- a/views/_shell.pug
+++ b/views/_shell.pug
@@ -6,52 +6,8 @@ html(lang='en')
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=",
         crossorigin="anonymous"
       )
-    style.
-      body {
-        font-family: sans-serif;
-      }
-
-      div {
-        margin-top: 10px;
-      }
-
-      input {
-        padding: 10px 15px;
-        border: 1px solid #d3d3d3;
-      }
-
-      button {
-        padding: 10px 15px;
-        margin-top: 15px;
-        margin-right: 15px;
-        background: #f3f3f3;
-        border: 1px solid #d3d3d3;
-        border-radius: 3px;
-      }
-
-      button:hover,
-      button:focus {
-        cursor: pointer;
-        background: #e9e9e9;
-        outline: none;
-      }
-
-      section {
-        display: none;
-      }
-
-      .is-showing {
-        display: block;
-      }
-
-      #spy_marker {
-        position: absolute;
-        background-color: blue;
-        width: 4px;
-        height: 4px;
-        left: 0px;
-        top: 0px;
-      }
+    link(href="https://fonts.googleapis.com/css?family=Roboto:300,400,500", rel="stylesheet")
+    link(rel="stylesheet", href="/styles.css")
 
   body
     block Body
