--- a/views/index.pug
+++ b/views/index.pug
@@ -1,69 +1,17 @@
 extends ./_shell
 
 block Body
-  div#spy_marker
-  section.is-showing#create-join
-    h2 Create a Room
-    p Welcome, you need to create a room to get started
-    form#createRoomForm
-      div: input(type="text", name="name")
-      //- div: input(type="number", name="playerCount" value="2")
-      button(type="submit") Create a Room
-      //- button#dropRoomsBtn Drop all Rooms
+  ul.pages
+    li.chat.page
+      div.chat-area
+        ul.messages
+      input.input-message(placeholder="Type here...")
+    li.login.page
+      div.form
+        h3.title What's your nickname?
+        input.username-input(type="text", maxlength="14")
 
-  //-   div
-  //-     form#joinRoomForm
-  //-       div: input(type="text", name="name")
-  //-       div: input(type="text", name="room", placeholder="Room ID")
-  //-       button(type="submit") Join Room
-  //-   div
-  //-     span#dropped
-
-  //- section#joined-room
-  //-   div
-  //-     h2 Room
-      //- p Waiting for other players...
-
-    aside
-      ul.player-list
 
 block Footer
   script(src="/socket.io/socket.io.js")
-  script.
-    var socket = io.connect('/')
-    var $form = $('form')
-    var $p = $('p')
-    var $spy_marker = $('#spy_marker')
-
-    // When connected
-    socket.on('connect', function() {
-      console.log('connected')
-    })
-
-    // When disconnected
-    socket.on('disconnect', function() {
-      console.log('disconnected')
-    })
-
-    socket.on('message', function(data) {
-      $p.text(data)
-    })
-
-    socket.on('move', function(data) {
-      $spy_marker.css({
-        left: (data.x - 2) + 'px',
-        top: (data.y - 2) + 'px'
-      })
-    })
-
-    $form.on('submit', function(e) {
-      e.preventDefault()
-      socket.emit('submit', $form.find('input').val())
-    })
-
-    $(document).on('mousemove', function(e) {
-      socket.emit('move', {
-        x: e.pageX,
-        y: e.pageY
-      })
-    })
+  script(src="main.js")
