--- a/views/_shell.pug
+++ b/views/_shell.pug
@@ -6,6 +6,7 @@ html(lang='en')
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=",
         crossorigin="anonymous"
       )
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css")
     link(href="https://fonts.googleapis.com/css?family=Roboto:300,400,500", rel="stylesheet")
     link(rel="stylesheet", href="/styles.css")
 
