--- a/views/_shell.pug
+++ b/views/_shell.pug
@@ -1,11 +1,13 @@
 doctype html
 html(lang='en')
   head
+    meta(name="viewport", content="width=device-width, initial-scale=1")
     script(
-        src="https://code.jquery.com/jquery-3.1.1.min.js",
-        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=",
-        crossorigin="anonymous"
-      )
+      src="https://code.jquery.com/jquery-3.1.1.min.js",
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=",
+      crossorigin="anonymous"
+    )
+    script(src="https://use.fontawesome.com/bdd834c7e7.js" async)
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css")
     link(href="https://fonts.googleapis.com/css?family=Roboto:300,400,500", rel="stylesheet")
     link(rel="stylesheet", href="/styles.css")
