--- a/views/index.pug
+++ b/views/index.pug
@@ -4,8 +4,8 @@ block Body
 
   //- Page to create a room
   section.login
+    h1.mtn.align-center: img(src="/images/aeons-end.png")
     div.login-content
-      h1.mtn: img(src="/images/aeons-end.png")
       h2 Create a Room
 
       label.new-line.align-left
