--- a/public/styles.css
+++ b/public/styles.css
@@ -4,13 +4,23 @@
 */
 * {
   box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
 }
 
 html {
   height: 100%;
+  position: relative;
   background: #151414 url('/images/waywardone.jpg') 0 0 no-repeat;
   background-size: cover;
+}
+
+html::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(21, 20, 20, 0.80);
 }
 
 body {
@@ -57,6 +67,11 @@ h1, h2, h3, h4 {
   color: white;
 }
 
+.unstyled {
+  padding-left: 0;
+  list-style: none;
+}
+
 label {
   font-weight: 500;
 }
@@ -92,8 +107,8 @@ button,
 [class*="btn"] {
   display: inline-block;
   padding: 10px 12px;
-  background: #427198;
-  border: none;
+  background: transparent;
+  border: 1px solid white;
   border-radius: 3px;
   color: white;
   line-height: 1em;
@@ -103,7 +118,7 @@ button:hover,
 button:focus,
 [class*="btn"]:hover,
 [class*="btn"]:focus {
-  background: #6d90ad;
+  /*background: #6d90ad;*/
   outline: none;
   cursor: pointer;
 }
@@ -158,6 +173,11 @@ button:focus,
 
 .align-right {
   text-align: right;
+}
+
+.float-center {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .new-line {
@@ -273,15 +293,14 @@ button:focus,
     position: absolute;
     top: 0;
     left: 0;
-    background: rgba(21, 20, 20, 0.35);
-    transition: opacity 300ms ease-in-out;
     opacity: 0;
-    z-index: -1;
+    transform: translate(-100%, 0);
+    transition: all 300ms ease-in-out;
   }
 
   .screen.is-showing {
     opacity: 1;
-    z-index: 999;
+    transform: translate(0, 0);
   }
 
   .login-content {
@@ -289,6 +308,16 @@ button:focus,
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+  }
+
+  .room-stats {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+  }
+
+  .room-stats ul {
+    margin: 0;
   }
 }
 
